ADD_SUBDIRECTORY(config)
ADD_SUBDIRECTORY(demo)
ADD_SUBDIRECTORY(desktopservices)
ADD_SUBDIRECTORY(ldap)
ADD_SUBDIRECTORY(localdata)
ADD_SUBDIRECTORY(powercontrol)
ADD_SUBDIRECTORY(remoteaccess)
ADD_SUBDIRECTORY(screenshot)
ADD_SUBDIRECTORY(screenlock)
ADD_SUBDIRECTORY(servicecontrol)
ADD_SUBDIRECTORY(textmessage)
ADD_SUBDIRECTORY(vncserver)
