ADD_SUBDIRECTORY(builtindirectory)
ADD_SUBDIRECTORY(config)
ADD_SUBDIRECTORY(demo)
ADD_SUBDIRECTORY(desktopservices)
ADD_SUBDIRECTORY(internetaccesscontrol)
ADD_SUBDIRECTORY(ldap)
ADD_SUBDIRECTORY(platform)
ADD_SUBDIRECTORY(powercontrol)
ADD_SUBDIRECTORY(remoteaccess)
ADD_SUBDIRECTORY(screenshot)
ADD_SUBDIRECTORY(screenlock)
ADD_SUBDIRECTORY(servicecontrol)
ADD_SUBDIRECTORY(systemusergroups)
ADD_SUBDIRECTORY(textmessage)
ADD_SUBDIRECTORY(vncserver)
