LINK_LIBRARIES(${PAM_LIBRARY})
INCLUDE_DIRECTORIES(${PAM_INCLUDE_DIR})
ADD_EXECUTABLE(italc-auth-helper ${CMAKE_CURRENT_SOURCE_DIR}/ItalcAuthHelper.cpp)
INSTALL(TARGETS italc-auth-helper RUNTIME DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE SETUID GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

TARGET_LINK_LIBRARIES(italc-auth-helper Qt5::Core)

